<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#4876FF">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="50sp"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:layout_weight="1"

            />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="9"
    android:gravity="center_horizontal">
        <Button
            android:id="@+id/startBtn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:background="#ee7600"
            android:text="@string/start"
            android:textColor="#191970"
            android:textSize="15sp" />
</LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text= "@string/Author"
            android:textSize="20sp"
            android:textColor="#FFFFFF"/>

</LinearLayout>


</android.support.constraint.ConstraintLayout>