<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.productInfo">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:stretchColumns="1">

            <TableRow
                android:layout_marginTop="50dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/bar"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/barTxt"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow android:layout_marginTop="50dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/nameTxt"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow android:layout_marginTop="50dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/priceTxt"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow android:layout_marginTop="50dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/descriptionTxt"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>