<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Check_out">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EDEDED"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/success"
                android:textColor="#43CD80"
                android:textSize="50dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalCostTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="center"
                android:textSize="20dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:background="#FFFFFF">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">


                <TableRow android:layout_marginTop="30dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/amount_shopping"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/shoppingAmount"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:gravity="end" />
                </TableRow>


                <TableRow android:layout_marginTop="30dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/transaction_number"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:text="@string/trNum"
                        />
                </TableRow>


                <TableRow android:layout_marginTop="30dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/trading_time"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/shoppingTime"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_gravity="end"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/finishBtn"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="#6495ED"
                android:text="Finish"
                android:textColor="#ffff"
                android:textSize="20dp" />
        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>